test/files/neg/t9834.check
t9834.scala:5: error: value += is not a member of Int
  x() += "42"
      ^
Expression does not convert to assignment because:
 -- type mismatch;
 found   : String
 required: Int
one error found
